[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets2/Icones/seta1.png" type="Texture" id=1]
[ext_resource path="res://Assets2/Icones/seta2.png" type="Texture" id=2]
[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Scripts/Volume.gd" type="Script" id=4]
[ext_resource path="res://Sons/confirmacao.wav" type="AudioStream" id=5]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=6]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets2/Icones/slide1.png" type="Texture" id=8]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets2/Icones/slide2.png" type="Texture" id=10]
[ext_resource path="res://Assets2/Icones/icones_gerais.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 11 )
region_rect = Rect2( 273.642, 162.58, 43.4558, 12.0021 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 9 )

[node name="Volume" type="Node2D"]
script = ExtResource( 4 )

[node name="FundoTela1" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 640, 360 )
scale = Vector2( 6.66667, 6.66667 )
texture = ExtResource( 3 )

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_left = 43.0
margin_top = 15.0
margin_right = 67.0
margin_bottom = 51.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="SomConfirmar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -13.0

[node name="Slider3" type="Sprite" parent="."]
position = Vector2( 602, 345 )
scale = Vector2( 7.75, 10.4844 )

[node name="Slide1" type="Sprite" parent="."]
position = Vector2( 587.5, 346.5 )
scale = Vector2( 7.98936, 10.6563 )
texture = ExtResource( 8 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 363.0
margin_top = 339.0
margin_right = 516.0
margin_bottom = 370.0
rect_scale = Vector2( 3, 3 )
custom_icons/grabber_disabled = ExtResource( 10 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -30.0
max_value = 0.0

[node name="Less" type="Sprite" parent="."]
position = Vector2( 328, 390 )
scale = Vector2( 6.25, 5.05966 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 863.787, 226.045, 16.4101, 11.8914 )

[node name="Plus" type="Sprite" parent="."]
position = Vector2( 876, 388 )
scale = Vector2( 6.40885, 5.46079 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 847.852, 224.618, 16.8857, 15.2209 )

[node name="INSTRUCOES" type="Label" parent="."]
modulate = Color( 0.952941, 0.898039, 0.760784, 1 )
self_modulate = Color( 0.768627, 0.603922, 0.423529, 1 )
margin_left = 264.0
margin_top = 276.0
margin_right = 930.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 4 )
text = "VOLUME"
align = 1
valign = 1

[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
